--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-range-slider-input": "^3.0.7",
     "sharp": "^0.33.5",
     "swiper": "^11.1.14"
   },
