--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@glidejs/glide": "^3.6.2",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
